feat: add backend with-friends backend flow
